--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "eguana/iebrasil",
     "description": "Esse pacote é utilizado para formatar (Mascara) inscrições estaduais de todos os estados brasileiros.",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Eguana Soluções",
@@ -12,6 +12,7 @@
     "homepage": "https://github.com/EguanaSolucoes/iebrasil",
     "keywords": ["Laravel", "IEBrasil", "Inscrições estaduais"],
     "require": {
+        "php": ">=5.6.0,<8.0",
         "illuminate/support": "~5"
     },
     "require-dev": {
